Added checklist tab for daily and weekly tasks

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,8 +25,7 @@
       Home
     </a>
     <a routerLink="/timers" routerLinkActive="active">Timers</a>
-    <a routerLink="/planner" routerLinkActive="active">Planner</a>
-    <a routerLink="/guides" routerLinkActive="active">Guides</a>
+    <a routerLink="/checklist" routerLinkActive="active">Checklist</a>
   </nav>
 
   <!-- Mobile burger button -->
@@ -53,10 +52,7 @@
   <a routerLink="/timers" routerLinkActive="active" (click)="closeMenu()">
     Timers
   </a>
-  <a routerLink="/planner" routerLinkActive="active" (click)="closeMenu()">
-    Planner
-  </a>
-  <a routerLink="/guides" routerLinkActive="active" (click)="closeMenu()">
-    Guides
+  <a routerLink="/checklist" routerLinkActive="active" (click)="closeMenu()">
+    Checklist
   </a>
 </nav>
