--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,4 +5,40 @@
   <main class="app-main">
     <router-outlet></router-outlet>
   </main>
+
+  <footer class="app-footer">
+  <div class="app-footer-inner">
+    <span class="app-footer-copy">
+      Unofficial helper for <span class="app-footer-game">Where Winds Meet</span>.
+    </span>
+
+    <nav class="app-footer-links">
+      <span>Find me on: </span>
+
+      <a
+        href="https://www.reddit.com/user/Besaids/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Reddit User
+      </a>
+
+      <a
+        href="https://discordapp.com/users/224358387448545280"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Discord User
+      </a>
+
+      <a
+        href="https://suno.com/playlist/cda7ce2e-c15f-47ad-bb20-885a9ee22513"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Where Winds Met - Suno Playlist
+      </a>
+    </nav>
+  </div>
+</footer>
 </div>
