--- a/src/app/components/timer-strip/timer-strip.component.html
+++ b/src/app/components/timer-strip/timer-strip.component.html
@@ -2,7 +2,7 @@
   <div class="timer-strip-inner">
     @if (timers$ | async; as timers) {
       @for (t of timers; track t.id) {
-        <div class="timer-pill">
+        <div class="timer-pill chip">
           <i class="bi" [ngClass]="t.icon"></i>
           <span class="label">{{ t.label }}</span>
           <span class="value">{{ t.remaining }}</span>
