--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
     </button>
   </div>
 
-  <!-- Mobile dropdown menu: should appear directly under logo+burger -->
+  <!-- Mobile dropdown menu: appears directly under logo+burger on small screens -->
   <nav class="mobile-menu" [class.mobile-menu--open]="isMenuOpen">
     <a
       routerLink="/home"
