--- a/src/app/components/music-player/music-player.component.scss
+++ b/src/app/components/music-player/music-player.component.scss
@@ -124,11 +124,7 @@
 }
 
 .music-player-icon-btn--primary {
-  background: linear-gradient(
-    135deg,
-    rgba(234, 179, 8, 0.2),
-    rgba(45, 212, 191, 0.2)
-  );
+  background: linear-gradient(135deg, rgba(234, 179, 8, 0.2), rgba(45, 212, 191, 0.2));
   color: var(--color-text-primary);
 }
 
