--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -15,11 +15,7 @@
       <nav class="app-footer-links">
         <span>Find me on: </span>
 
-        <a
-          href="https://www.reddit.com/user/Besaids/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
+        <a href="https://www.reddit.com/user/Besaids/" target="_blank" rel="noopener noreferrer">
           Reddit User
         </a>
 
